--- a/research_notebooks/symmetry_research.ipynb
+++ b/research_notebooks/symmetry_research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "bf43c8b3",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "cd99565c",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "f303c4c2",
    "metadata": {},
    "outputs": [
@@ -138,13 +138,7 @@
       "Standard deviation for space group 148: 1.126882 Å\n",
       "Standard deviation for space group 155: 1.108036 Å\n",
       "Standard deviation for space group 160: 1.100426 Å\n",
-      "Standard deviation for space group 161: 1.108662 Å\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Standard deviation for space group 161: 1.108662 Å\n",
       "Standard deviation for space group 166: 1.136824 Å\n",
       "Standard deviation for space group 167: 1.146345 Å\n"
      ]
@@ -163,63 +157,393 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "8ef003fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20"
+       "(1.1463451260346529,\n",
+       " [1.1991566703695942,\n",
+       "  1.1841602132549545,\n",
+       "  1.1264475070060451,\n",
+       "  1.1054612745760937,\n",
+       "  1.2170901627810162,\n",
+       "  1.153036228441944,\n",
+       "  1.0997568723520195,\n",
+       "  1.2803067803506218,\n",
+       "  1.1848167942087169,\n",
+       "  1.2264330507925036,\n",
+       "  1.0950517338682628,\n",
+       "  1.213645491597022,\n",
+       "  1.0877253037928736,\n",
+       "  1.0880694225104974,\n",
+       "  1.0293280679781172,\n",
+       "  1.1555993347937674,\n",
+       "  1.0348712402252445,\n",
+       "  1.130664493048197,\n",
+       "  1.1155664125587632,\n",
+       "  1.199715466186802])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(test_structure)"
+    "analyze_structure_symmetry(test_structure, SpaceGroup.from_int_number(167))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
+   "id": "01ac82d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "------Crystal from Random------\n",
+       "Dimension: 3\n",
+       "Group: I4/mcm (140)\n",
+       "  2.5314,   2.5314,  17.4328,  90.0000,  90.0000,  90.0000, tetragonal\n",
+       "Wyckoff sites:\n",
+       "\t H @ [ 0.0000  0.5000  0.7612], WP [8g] Site [2.mm]\n",
+       "\t H @ [ 0.0000  0.0000  0.2500], WP [4a] Site [422]\n",
+       "\t H @ [ 0.0000  0.5000  0.0000], WP [4d] Site [m.mm]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = pyxtal()\n",
+    "s.from_random(dim=3, group=140, species=[\"H\"], numIons=[16])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5f5bc26a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New cubic structure created.\n",
+      "Lattice abc: (7.439917882283528, 7.439917882283528, 7.439917882283528)\n",
+      "Lattice angles: (90.0, 90.0, 90.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the average lattice parameter from the original structure\n",
+    "avg_lattice_param = np.mean(test_structure.lattice.abc)\n",
+    "\n",
+    "# Create a new cubic lattice\n",
+    "cubic_lattice = Lattice.cubic(avg_lattice_param)\n",
+    "\n",
+    "# Create a new structure with the cubic lattice but the same fractional coordinates\n",
+    "cubic_test_structure = Structure(cubic_lattice, test_structure.species, test_structure.frac_coords)\n",
+    "\n",
+    "# Print information about the new structure to verify\n",
+    "print(\"New cubic structure created.\")\n",
+    "print(f\"Lattice abc: {cubic_test_structure.lattice.abc}\")\n",
+    "print(f\"Lattice angles: {cubic_test_structure.lattice.angles}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "988f4fb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Structure Summary\n",
+       "Lattice\n",
+       "    abc : 7.439917882283528 7.439917882283528 7.439917882283528\n",
+       " angles : 90.0 90.0 90.0\n",
+       " volume : 411.8171476168189\n",
+       "      A : 7.439917882283528 0.0 0.0\n",
+       "      B : 0.0 7.439917882283528 0.0\n",
+       "      C : 0.0 0.0 7.439917882283528\n",
+       "    pbc : True True True\n",
+       "PeriodicSite: H (5.992, 6.018, 3.53) [0.8054, 0.8089, 0.4745]\n",
+       "PeriodicSite: H (0.8188, 4.571, 3.539) [0.1101, 0.6144, 0.4757]\n",
+       "PeriodicSite: H (4.142, 4.149, 7.255) [0.5567, 0.5577, 0.9751]\n",
+       "PeriodicSite: H (2.275, 0.4453, 5.389) [0.3058, 0.05986, 0.7243]\n",
+       "PeriodicSite: H (5.988, 4.564, 5.763) [0.8049, 0.6134, 0.7746]\n",
+       "PeriodicSite: H (5.968, 2.288, 1.182) [0.8022, 0.3075, 0.1588]\n",
+       "PeriodicSite: H (2.303, 4.141, 1.672) [0.3096, 0.5566, 0.2247]\n",
+       "PeriodicSite: H (2.288, 2.302, 3.533) [0.3075, 0.3094, 0.4748]\n",
+       "PeriodicSite: H (3.755, 2.292, 1.209) [0.5046, 0.3081, 0.1625]\n",
+       "PeriodicSite: H (5.989, 2.302, 3.525) [0.805, 0.3094, 0.4738]\n",
+       "PeriodicSite: H (0.8051, 2.299, 5.76) [0.1082, 0.3091, 0.7741]\n",
+       "PeriodicSite: H (4.142, 6.019, 5.39) [0.5567, 0.809, 0.7245]\n",
+       "PeriodicSite: H (0.4242, 4.153, 7.261) [0.05701, 0.5583, 0.976]\n",
+       "PeriodicSite: H (3.751, 0.06178, 3.529) [0.5042, 0.008303, 0.4743]\n",
+       "PeriodicSite: H (0.417, 0.4257, 3.53) [0.05605, 0.05722, 0.4744]\n",
+       "PeriodicSite: H (5.964, 2.289, 6.604) [0.8016, 0.3077, 0.8877]\n",
+       "PeriodicSite: H (0.4186, 0.437, 7.247) [0.05626, 0.05873, 0.974]\n",
+       "PeriodicSite: H (5.973, 0.05542, 1.234) [0.8028, 0.007449, 0.1658]\n",
+       "PeriodicSite: H (0.4173, 6.012, 1.667) [0.05609, 0.8081, 0.2241]\n",
+       "PeriodicSite: H (2.29, 6.013, 7.259) [0.3079, 0.8083, 0.9756]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cubic_test_structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "66c4d278",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = SpacegroupAnalyzer(cubic_test_structure)\n",
+    "a.get_space_group_number()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b7c05538",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Structure Summary\n",
+       "Lattice\n",
+       "    abc : 7.439917882283528 7.439917882283528 7.439917882283528\n",
+       " angles : 90.0 90.0 90.0\n",
+       " volume : 411.8171476168189\n",
+       "      A : 7.439917882283528 0.0 0.0\n",
+       "      B : 0.0 7.439917882283528 0.0\n",
+       "      C : 0.0 0.0 7.439917882283528\n",
+       "    pbc : True True True\n",
+       "PeriodicSite: H (5.992, 6.018, 3.53) [0.8054, 0.8089, 0.4745]\n",
+       "PeriodicSite: H (0.8188, 4.571, 3.539) [0.1101, 0.6144, 0.4757]\n",
+       "PeriodicSite: H (4.142, 4.149, 7.255) [0.5567, 0.5577, 0.9751]\n",
+       "PeriodicSite: H (2.275, 0.4453, 5.389) [0.3058, 0.05986, 0.7243]\n",
+       "PeriodicSite: H (5.988, 4.564, 5.763) [0.8049, 0.6134, 0.7746]\n",
+       "PeriodicSite: H (5.968, 2.288, 1.182) [0.8022, 0.3075, 0.1588]\n",
+       "PeriodicSite: H (2.303, 4.141, 1.672) [0.3096, 0.5566, 0.2247]\n",
+       "PeriodicSite: H (2.288, 2.302, 3.533) [0.3075, 0.3094, 0.4748]\n",
+       "PeriodicSite: H (3.755, 2.292, 1.209) [0.5046, 0.3081, 0.1625]\n",
+       "PeriodicSite: H (5.989, 2.302, 3.525) [0.805, 0.3094, 0.4738]\n",
+       "PeriodicSite: H (0.8051, 2.299, 5.76) [0.1082, 0.3091, 0.7741]\n",
+       "PeriodicSite: H (4.142, 6.019, 5.39) [0.5567, 0.809, 0.7245]\n",
+       "PeriodicSite: H (0.4242, 4.153, 7.261) [0.05701, 0.5583, 0.976]\n",
+       "PeriodicSite: H (3.751, 0.06178, 3.529) [0.5042, 0.008303, 0.4743]\n",
+       "PeriodicSite: H (0.417, 0.4257, 3.53) [0.05605, 0.05722, 0.4744]\n",
+       "PeriodicSite: H (5.964, 2.289, 6.604) [0.8016, 0.3077, 0.8877]\n",
+       "PeriodicSite: H (0.4186, 0.437, 7.247) [0.05626, 0.05873, 0.974]\n",
+       "PeriodicSite: H (5.973, 0.05542, 1.234) [0.8028, 0.007449, 0.1658]\n",
+       "PeriodicSite: H (0.4173, 6.012, 1.667) [0.05609, 0.8081, 0.2241]\n",
+       "PeriodicSite: H (2.29, 6.013, 7.259) [0.3079, 0.8083, 0.9756]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cubic_test_structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b25258d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Structure Summary\n",
+       "Lattice\n",
+       "    abc : 7.439917882283528 7.439917882283528 7.439917882283528\n",
+       " angles : 90.0 90.0 90.0\n",
+       " volume : 411.8171476168189\n",
+       "      A : 7.439917882283528 0.0 0.0\n",
+       "      B : -4.555635810228839e-16 -7.439917882283528 0.0\n",
+       "      C : -4.555635810228839e-16 -4.555635810228839e-16 -7.439917882283528\n",
+       "    pbc : True True True\n",
+       "PeriodicSite: H (5.992, -1.421, -3.91) [0.8054, 0.1911, 0.5255]\n",
+       "PeriodicSite: H (0.8188, -2.868, -3.901) [0.1101, 0.3856, 0.5243]\n",
+       "PeriodicSite: H (4.142, -3.291, -0.1851) [0.5567, 0.4423, 0.02488]\n",
+       "PeriodicSite: H (2.275, -6.995, -2.051) [0.3058, 0.9401, 0.2757]\n",
+       "PeriodicSite: H (5.988, -2.876, -1.677) [0.8049, 0.3866, 0.2254]\n",
+       "PeriodicSite: H (5.968, -5.152, -6.258) [0.8022, 0.6925, 0.8412]\n",
+       "PeriodicSite: H (2.303, -3.299, -5.768) [0.3096, 0.4434, 0.7753]\n",
+       "PeriodicSite: H (2.288, -5.138, -3.907) [0.3075, 0.6906, 0.5252]\n",
+       "PeriodicSite: H (3.755, -5.148, -6.231) [0.5046, 0.6919, 0.8375]\n",
+       "PeriodicSite: H (5.989, -5.138, -3.915) [0.805, 0.6906, 0.5262]\n",
+       "PeriodicSite: H (0.8051, -5.141, -1.68) [0.1082, 0.6909, 0.2259]\n",
+       "PeriodicSite: H (4.142, -1.421, -2.05) [0.5567, 0.191, 0.2755]\n",
+       "PeriodicSite: H (0.4242, -3.287, -0.1788) [0.05701, 0.4417, 0.02404]\n",
+       "PeriodicSite: H (3.751, -7.378, -3.911) [0.5042, 0.9917, 0.5257]\n",
+       "PeriodicSite: H (0.417, -7.014, -3.91) [0.05605, 0.9428, 0.5256]\n",
+       "PeriodicSite: H (5.964, -5.151, -0.8356) [0.8016, 0.6923, 0.1123]\n",
+       "PeriodicSite: H (0.4186, -7.003, -0.1931) [0.05626, 0.9413, 0.02596]\n",
+       "PeriodicSite: H (5.973, -7.385, -6.206) [0.8028, 0.9926, 0.8342]\n",
+       "PeriodicSite: H (0.4173, -1.427, -5.773) [0.05609, 0.1919, 0.7759]\n",
+       "PeriodicSite: H (2.29, -1.427, -0.1813) [0.3079, 0.1917, 0.02436]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.get_primitive_standard_structure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "c046cf01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.1991566703695942,\n",
-       " 1.1841602132549545,\n",
-       " 1.1264475070060451,\n",
-       " 1.1054612745760937,\n",
-       " 1.2170901627810162,\n",
-       " 1.153036228441944,\n",
-       " 1.0997568723520195,\n",
-       " 1.2803067803506218,\n",
-       " 1.1848167942087169,\n",
-       " 1.2264330507925036,\n",
-       " 1.0950517338682628,\n",
-       " 1.213645491597022,\n",
-       " 1.0877253037928736,\n",
-       " 1.0880694225104974,\n",
-       " 1.0293280679781172,\n",
-       " 1.1555993347937674,\n",
-       " 1.0348712402252445,\n",
-       " 1.130664493048197,\n",
-       " 1.1155664125587632,\n",
-       " 1.199715466186802]"
+       "'triclinic'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "site_deviation"
+    "analyzer = SpacegroupAnalyzer(test_structure)\n",
+    "analyzer.get_lattice_type()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a9fce4eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "------Crystal from Seed------\n",
+       "Dimension: 3\n",
+       "Composition: H20\n",
+       "Group: P 1 (1)\n",
+       "  7.4399,   7.4399,   7.4399, 109.4685, 109.4685, 109.4685, triclinic\n",
+       "Wyckoff sites:\n",
+       "\t H @ [ 0.8054  0.8089  0.4745], WP [1a] Site [1]\n",
+       "\t H @ [ 0.1101  0.6144  0.4757], WP [1a] Site [1]\n",
+       "\t H @ [ 0.5567  0.5577  0.9751], WP [1a] Site [1]\n",
+       "\t H @ [ 0.3058  0.0599  0.7243], WP [1a] Site [1]\n",
+       "\t H @ [ 0.8049  0.6134  0.7746], WP [1a] Site [1]\n",
+       "\t H @ [ 0.8022  0.3075  0.1588], WP [1a] Site [1]\n",
+       "\t H @ [ 0.3096  0.5566  0.2247], WP [1a] Site [1]\n",
+       "\t H @ [ 0.3075  0.3094  0.4748], WP [1a] Site [1]\n",
+       "\t H @ [ 0.5046  0.3081  0.1625], WP [1a] Site [1]\n",
+       "\t H @ [ 0.8050  0.3094  0.4738], WP [1a] Site [1]\n",
+       "\t H @ [ 0.1082  0.3091  0.7741], WP [1a] Site [1]\n",
+       "\t H @ [ 0.5567  0.8090  0.7245], WP [1a] Site [1]\n",
+       "\t H @ [ 0.0570  0.5583  0.9760], WP [1a] Site [1]\n",
+       "\t H @ [ 0.5042  0.0083  0.4743], WP [1a] Site [1]\n",
+       "\t H @ [ 0.0561  0.0572  0.4744], WP [1a] Site [1]\n",
+       "\t H @ [ 0.8016  0.3077  0.8877], WP [1a] Site [1]\n",
+       "\t H @ [ 0.0563  0.0587  0.9740], WP [1a] Site [1]\n",
+       "\t H @ [ 0.8028  0.0074  0.1658], WP [1a] Site [1]\n",
+       "\t H @ [ 0.0561  0.8081  0.2241], WP [1a] Site [1]\n",
+       "\t H @ [ 0.3079  0.8083  0.9756], WP [1a] Site [1]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = pyxtal()\n",
+    "t.from_seed(test_structure.to_primitive())\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0e2e056d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Structure Summary\n",
+       "Lattice\n",
+       "    abc : 7.439917882283528 7.439917882283529 7.439917882283528\n",
+       " angles : 109.46848805745445 109.46848805745445 109.46848805745446\n",
+       " volume : 317.049056914382\n",
+       "      A : 7.439917882283528 0.0 0.0\n",
+       "      B : -2.479638089529604 7.014540116078616 0.0\n",
+       "      C : -2.4796380895296024 -3.5065604318874786 6.075179583979169\n",
+       "    pbc : True True True\n",
+       "PeriodicSite: H (2.81, 4.011, 2.883) [0.8054, 0.8089, 0.4745]\n",
+       "PeriodicSite: H (-1.884, 2.642, 2.89) [0.1101, 0.6144, 0.4757]\n",
+       "PeriodicSite: H (0.3413, 0.4924, 5.924) [0.5567, 0.5577, 0.9751]\n",
+       "PeriodicSite: H (0.3304, -2.12, 4.401) [0.3058, 0.05986, 0.7243]\n",
+       "PeriodicSite: H (2.546, 1.587, 4.706) [0.8049, 0.6134, 0.7746]\n",
+       "PeriodicSite: H (4.812, 1.6, 0.965) [0.8022, 0.3075, 0.1588]\n",
+       "PeriodicSite: H (0.3657, 3.116, 1.365) [0.3096, 0.5566, 0.2247]\n",
+       "PeriodicSite: H (0.3434, 0.5053, 2.885) [0.3075, 0.3094, 0.4748]\n",
+       "PeriodicSite: H (2.588, 1.591, 0.9872) [0.5046, 0.3081, 0.1625]\n",
+       "PeriodicSite: H (4.047, 0.5088, 2.878) [0.805, 0.3094, 0.4738]\n",
+       "PeriodicSite: H (-1.881, -0.5467, 4.703) [0.1082, 0.3091, 0.7741]\n",
+       "PeriodicSite: H (0.3395, 3.134, 4.401) [0.5567, 0.809, 0.7245]\n",
+       "PeriodicSite: H (-3.38, 0.4936, 5.929) [0.05701, 0.5583, 0.976]\n",
+       "PeriodicSite: H (2.554, -1.605, 2.881) [0.5042, 0.008303, 0.4743]\n",
+       "PeriodicSite: H (-0.9012, -1.262, 2.882) [0.05605, 0.05722, 0.4744]\n",
+       "PeriodicSite: H (3.0, -0.9544, 5.393) [0.8016, 0.3077, 0.8877]\n",
+       "PeriodicSite: H (-2.142, -3.004, 5.917) [0.05626, 0.05873, 0.974]\n",
+       "PeriodicSite: H (5.543, -0.5292, 1.007) [0.8028, 0.007449, 0.1658]\n",
+       "PeriodicSite: H (-2.142, 4.883, 1.362) [0.05609, 0.8081, 0.2241]\n",
+       "PeriodicSite: H (-2.133, 2.248, 5.927) [0.3079, 0.8083, 0.9756]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_structure.to_primitive()"
    ]
   },
   {
