--- a/research_notebooks/cdvae_metrics.ipynb
+++ b/research_notebooks/cdvae_metrics.ipynb
@@ -83,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8286559757f4061834c8d82dbaf3fce",
+       "model_id": "4540ca7ece1e4ce1a68092c315a3754b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f90bfdfd6bdb4c6b83a53aaab954f984",
+       "model_id": "37d977874b324ce6a135cef3c96b9061",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1508754350bd4ca5acc25c8e06973db0",
+       "model_id": "36a25dcf6e144ec79967401f21158305",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,12 +173,20 @@
     "        dataset = these_dataset[transformations]\n",
     "        results[dataset_name][\"no_filter\"][name] = \\\n",
     "            test_evaluator.compute_cdvae_metrics(dataset.data, novelty_filter=None, sample_size_for_precision=500)\n",
-    "        if dataset_name == \"carbon_24\":\n",
-    "            # It's super slow, as we have to compare each structure with all others\n",
-    "            continue\n",
     "        results[dataset_name][\"only_novel\"][name] = \\\n",
     "            test_evaluator.compute_cdvae_metrics(\n",
     "                dataset.data, novelty_filter=novelty_filter, sample_size_for_precision=500, compute_novelty=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(\"cdvae_metrics.json\", \"w\") as f:\n",
+    "    json.dump(results, f, indent=4)"
    ]
   },
   {
@@ -294,6 +302,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Model</th>\n",
+       "      <th>Novelty</th>\n",
        "      <th>Compositional</th>\n",
        "      <th>Structural</th>\n",
        "      <th>Recall</th>\n",
@@ -307,6 +316,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>MiAD</td>\n",
+       "      <td>27.671068</td>\n",
        "      <td>81.756570</td>\n",
        "      <td>98.962656</td>\n",
        "      <td>99.820144</td>\n",
@@ -318,6 +328,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>DiffCSP</td>\n",
+       "      <td>9.590000</td>\n",
        "      <td>82.136932</td>\n",
        "      <td>100.000000</td>\n",
        "      <td>99.734543</td>\n",
@@ -331,13 +342,13 @@
        "</div>"
       ],
       "text/plain": [
-       "     Model  Compositional  Structural     Recall  Precision   EMD_rho  \\\n",
-       "0     MiAD      81.756570   98.962656  99.820144  91.664824  0.324488   \n",
-       "1  DiffCSP      82.136932  100.000000  99.734543  92.582357  0.433102   \n",
+       "     Model    Novelty  Compositional  Structural     Recall  Precision  \\\n",
+       "0     MiAD  27.671068      81.756570   98.962656  99.820144  91.664824   \n",
+       "1  DiffCSP   9.590000      82.136932  100.000000  99.734543  92.582357   \n",
        "\n",
-       "      EMD_E  EMD_Elements  \n",
-       "0  0.082290      0.021135  \n",
-       "1  0.077322      0.382080  "
+       "    EMD_rho     EMD_E  EMD_Elements  \n",
+       "0  0.324488  0.082290      0.021135  \n",
+       "1  0.433102  0.077322      0.382080  "
       ]
      },
      "metadata": {},
@@ -451,6 +462,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Model</th>\n",
+       "      <th>Novelty</th>\n",
        "      <th>Compositional</th>\n",
        "      <th>Structural</th>\n",
        "      <th>Recall</th>\n",
@@ -464,6 +476,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>MiAD</td>\n",
+       "      <td>47.253038</td>\n",
        "      <td>98.147221</td>\n",
        "      <td>90.185278</td>\n",
        "      <td>88.258906</td>\n",
@@ -475,6 +488,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>DiffCSP</td>\n",
+       "      <td>48.360000</td>\n",
        "      <td>98.721921</td>\n",
        "      <td>99.980635</td>\n",
        "      <td>98.312645</td>\n",
@@ -488,13 +502,13 @@
        "</div>"
       ],
       "text/plain": [
-       "     Model  Compositional  Structural     Recall  Precision   EMD_rho  EMD_E  \\\n",
-       "0     MiAD      98.147221   90.185278  88.258906  75.138705  0.098551    NaN   \n",
-       "1  DiffCSP      98.721921   99.980635  98.312645  72.892999  0.053555    NaN   \n",
+       "     Model    Novelty  Compositional  Structural     Recall  Precision  \\\n",
+       "0     MiAD  47.253038      98.147221   90.185278  88.258906  75.138705   \n",
+       "1  DiffCSP  48.360000      98.721921   99.980635  98.312645  72.892999   \n",
        "\n",
-       "   EMD_Elements  \n",
-       "0      0.084060  \n",
-       "1      0.059145  "
+       "    EMD_rho  EMD_E  EMD_Elements  \n",
+       "0  0.098551    NaN      0.084060  \n",
+       "1  0.053555    NaN      0.059145  "
       ]
      },
      "metadata": {},
